# graphene-subscriptions

./: .gitignore  CHANELOG.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yml
graphene_subscriptions/: __init__.py  apps.py  consumers.py  events.py  mixins.py  serialize.py  signals.py  subscriptions.py  views.py
graphene_subscriptions/templates/graphene_subsciptions/: playground.html
subscriptions/: __init__.py  apps.py  consumers.py  events.py  models.py  signals.py
tests/: django_settings.py  models.py  schema.py  test_base.py  test_consumers.py  test_model_subscriptions.py  test_serialization.py
