[tool.poetry]
name = "graphene_subscriptions"
version = "0.1.0"
description = "A plug-and-play GraphQL subscription implementation for Graphene + Django built using Django Channels."
authors = ["Jayden Windle <jaydenwindle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
django = ">=1.11"
channels = "^2.3"
graphene-django = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
pytest-django = "^3.7"
pytest-emoji = "^0.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
