[tool.poetry]
name = "graphene_subscriptions"
version = "1.0.0"
description = "A plug-and-play GraphQL subscription implementation for Graphene + Django built using Django Channels."
homepage = "https://github.com/jaydenwindle/graphene-subscriptions"
repository = "https://github.com/jaydenwindle/graphene-subscriptions"
authors = ["Jayden Windle <jaydenwindle@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 1.11',
    'Framework :: Django :: 2.1',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[tool.poetry.dependencies]
python = ">=3.6"
django = ">=1.11"
channels = "^2.3"
graphene-django = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-asyncio = "^0.10.0"
pytest-django = "^3.7"
pytest-emoji = "^0.2.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
twine = "^3.1"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
