[tool.poetry]
name = "graphene_subscriptions"
version = "1.1.0
description = "A plug-and-play GraphQL subscription implementation for Graphene + Django built using Django Channels."
homepage = "https://github.com/jaydenwindle/graphene-subscriptions"
repository = "https://github.com/jaydenwindle/graphene-subscriptions"
authors = ["Jayden Windle <jaydenwindle@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 4.2',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[tool.poetry.dependencies]
python = ">=3.11"
django = "^4.2"
channels = "^4.0.0"
graphene-django = "^3.0.0"
graphql-core = "^3.2.3"
Rx = "^3.2.0"
exceptiongroup = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-django = "^4.5.0"
pytest-emoji = "^0.2.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
twine = "^3.1"
tox = "^3.14"
daphne = "^4.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
